Exception thrown when running WKBrowsingContextLoadDelegateTest.SimpleLoad test https://bugs.webkit.org/show_bug.cgi?id=75012

Reviewed by Adam Roben.

* UIProcess/API/mac/WKProcessGroup.mm:
(-[WKProcessGroup dealloc]):
Clear the WKContext's connection client.


Canonical link: https://commits.webkit.org/91757@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103412 268f45cc-cd09-0410-ab3c-d52691b4dbfc